Made name parts final. See #196.